project('arknights', 'cpp')

spine_sources = files(
  'spine-cpp/src/spine/PathAttachment.cpp',
  'spine-cpp/src/spine/PointAttachment.cpp',
  'spine-cpp/src/spine/TwoColorTimeline.cpp',
  'spine-cpp/src/spine/EventTimeline.cpp',
  'spine-cpp/src/spine/Extension.cpp',
  'spine-cpp/src/spine/PathConstraint.cpp',
  'spine-cpp/src/spine/IkConstraintTimeline.cpp',
  'spine-cpp/src/spine/IkConstraintData.cpp',
  'spine-cpp/src/spine/Skin.cpp',
  'spine-cpp/src/spine/PathConstraintMixTimeline.cpp',
  'spine-cpp/src/spine/Atlas.cpp',
  'spine-cpp/src/spine/Event.cpp',
  'spine-cpp/src/spine/ShearTimeline.cpp',
  'spine-cpp/src/spine/SlotData.cpp',
  'spine-cpp/src/spine/MeshAttachment.cpp',
  'spine-cpp/src/spine/BoneData.cpp',
  'spine-cpp/src/spine/IkConstraint.cpp',
  'spine-cpp/src/spine/Json.cpp',
  'spine-cpp/src/spine/MathUtil.cpp',
  'spine-cpp/src/spine/AnimationState.cpp',
  'spine-cpp/src/spine/LinkedMesh.cpp',
  'spine-cpp/src/spine/SkeletonJson.cpp',
  'spine-cpp/src/spine/SpineObject.cpp',
  'spine-cpp/src/spine/Skeleton.cpp',
  'spine-cpp/src/spine/DrawOrderTimeline.cpp',
  'spine-cpp/src/spine/ScaleTimeline.cpp',
  'spine-cpp/src/spine/AttachmentTimeline.cpp',
  'spine-cpp/src/spine/ClippingAttachment.cpp',
  'spine-cpp/src/spine/ColorTimeline.cpp',
  'spine-cpp/src/spine/Updatable.cpp',
  'spine-cpp/src/spine/CurveTimeline.cpp',
  'spine-cpp/src/spine/RegionAttachment.cpp',
  'spine-cpp/src/spine/AttachmentLoader.cpp',
  'spine-cpp/src/spine/SkeletonBounds.cpp',
  'spine-cpp/src/spine/Attachment.cpp',
  'spine-cpp/src/spine/DeformTimeline.cpp',
  'spine-cpp/src/spine/SkeletonBinary.cpp',
  'spine-cpp/src/spine/PathConstraintPositionTimeline.cpp',
  'spine-cpp/src/spine/SkeletonClipping.cpp',
  'spine-cpp/src/spine/Timeline.cpp',
  'spine-cpp/src/spine/TextureLoader.cpp',
  'spine-cpp/src/spine/SkeletonData.cpp',
  'spine-cpp/src/spine/VertexAttachment.cpp',
  'spine-cpp/src/spine/RotateTimeline.cpp',
  'spine-cpp/src/spine/Triangulator.cpp',
  'spine-cpp/src/spine/AtlasAttachmentLoader.cpp',
  'spine-cpp/src/spine/PathConstraintSpacingTimeline.cpp',
  'spine-cpp/src/spine/TransformConstraintTimeline.cpp',
  'spine-cpp/src/spine/Bone.cpp',
  'spine-cpp/src/spine/Slot.cpp',
  'spine-cpp/src/spine/ConstraintData.cpp',
  'spine-cpp/src/spine/PathConstraintData.cpp',
  'spine-cpp/src/spine/BoundingBoxAttachment.cpp',
  'spine-cpp/src/spine/EventData.cpp',
  'spine-cpp/src/spine/VertexEffect.cpp',
  'spine-cpp/src/spine/TransformConstraintData.cpp',
  'spine-cpp/src/spine/RTTI.cpp',
  'spine-cpp/src/spine/AnimationStateData.cpp',
  'spine-cpp/src/spine/Animation.cpp',
  'spine-cpp/src/spine/TransformConstraint.cpp',
  'spine-cpp/src/spine/TranslateTimeline.cpp',

  'spine-sfml/spine-sfml.cpp',
)

spine = library(
  'spine',
  spine_sources,
  include_directories: [include_directories('spine-cpp/include'), include_directories('spine-sfml')],
  dependencies: [dependency('sfml')],
)

arknights_sources = files(
  'src/main.cpp'
)

executable(
  'arknights',
  arknights_sources,
  dependencies: [dependency('sfml')],
  link_with: spine,
  include_directories: [include_directories('spine-cpp/include'), include_directories('spine-sfml')],
)
